# coderun-solutions

./: .clang-format  .editorconfig  .gitignore  LICENSE  README.md
stylish-clothes/: Makefile  tests.hpp
tasks/11-cycle-search/: CMakeLists.txt  Makefile  README.md
tasks/11-cycle-search/src/: solution.cpp  tests.hpp
tasks/12-shortest-path-length/: CMakeLists.txt  Makefile  README.md
tasks/12-shortest-path-length/src/: solution.cpp  tests.hpp
tasks/90-stylish-clothes/: Makefile  README.md
tasks/90-stylish-clothes/src/: solution.cpp
tasks/stylish-clothes/: .markdown-preview.html  CMakeLists.txt  CMakeUserPresets.json
tasks/stylish-clothes/src/: solution.cpp
